# strands-agent-streamlit-terraform

./: .gitignore  CONTRIBUTORS.md  LICENCE  NOTICE  README.md  locals.tf  main.tf  output.tf  providers.tf  variables.tf
docker_app/: .dockerignore  Dockerfile  Dockerfile.dev  app.py  app_streaming.py  config_file.py  pyproject.toml
docker_app/.streamlit/: config.toml
img/: archi_streamlit_tf.drawio
modules/serverless-streamlit-app/: README.md  main.tf
modules/streamlit_app/: data.tf  locals.tf  main.tf  output.tf  variables.tf
