[project]
name = "streamlit-strands-terraform"
version = "0.1.0"
description = "Streamlit Agent samples built using the Strands Agents SDK and Terraform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.38.18",
    "strands-agents==0.1.2",
    "strands-agents-tools>=0.1.1",
    "streamlit==1.45.1",
    "streamlit-cognito-auth==1.3.1",
]
